--- a/src/Presentation/SmartStore.Web/Administration/Views/ScheduleTask/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/ScheduleTask/List.cshtml
@@ -36,14 +36,15 @@
                             .Centered()
                             .Width(100);
 						columns.Bound(x => x.Id)
-							.ClientTemplate("<# if (LastStartUtc.length) {#><div><span>" + @T("Admin.System.ScheduleTasks.LastStart") + ":</span> <span class='muted'><#= LastStartUtc #></span></div><# } #>" +
-                                            "<# if (NextRunUtc) {#><div><span>" + @T("Admin.System.ScheduleTasks.NextRun") + ":</span> <span class='muted'><#= NextRunUtc #></span></div><# } #>" +
-											"<# if (!LastEndUtc && !IsRunning) {#><div><span>" + @T("Admin.System.ScheduleTasks.LastStart") + ":</span> <span class='muted'>" + @T("Common.Never") + "</span></div><# } #>" +
-											"<# if (Duration.length) {#><div><span>" + @T("Common.Duration") + ":</span> <span class='muted'><#= Duration #></span></div><# } #>" +
-											"<# if (LastError.length) {#><div class='text-error'><strong>" + @T("Common.Error") + ":</strong> <span><#= LastError #></span></div><# } #>" +								
-											"<# if (LastSuccessUtc != LastEndUtc) {#><div><span>" + @T("Admin.System.ScheduleTasks.LastSuccess") + ":</span> <span class='muted'><#= LastSuccessUtc #></span></div><# } #>" +
-											"<# if (!IsRunning) {#><a href='" + @runJobUrl + "<#= Id #>' class='btn btn-success' style='margin-top: 12px'><i class='fa fa-play'></i> " + @T("Admin.System.ScheduleTasks.RunNow") + "</a><# } #>" +
-											"<# if (IsRunning) {#><div style='margin-top: 12px'><i class='fa fa-refresh fa-spin'></i> " + @T("Admin.System.ScheduleTasks.RunNow.IsRunning") + "</div><# } #>")
+							.ClientTemplate(
+								"<# if (LastStartUtc.length) {#><div><span>" + @T("Admin.System.ScheduleTasks.LastStart") + ":</span> <span class='muted'><#= LastStartUtc #></span></div><# } #>" +
+								"<# if (NextRunUtc) {#><div><span>" + @T("Admin.System.ScheduleTasks.NextRun") + ":</span> <span class='muted'><#= NextRunUtc #></span></div><# } #>" +
+								"<# if (!LastEndUtc && !IsRunning) {#><div><span>" + @T("Admin.System.ScheduleTasks.LastStart") + ":</span> <span class='muted'>" + @T("Common.Never") + "</span></div><# } #>" +
+								"<# if (Duration.length) {#><div><span>" + @T("Common.Duration") + ":</span> <span class='muted'><#= Duration #></span></div><# } #>" +
+								"<# if (LastError.length) {#><div class='text-error'><strong>" + @T("Common.Error") + ":</strong> <span><#= LastError #></span></div><# } #>" +								
+								"<# if (LastSuccessUtc != LastEndUtc) {#><div><span>" + @T("Admin.System.ScheduleTasks.LastSuccess") + ":</span> <span class='muted'><#= LastSuccessUtc #></span></div><# } #>" +
+								"<# if (!IsRunning) {#><a href='" + @runJobUrl + "<#= Id #>' class='btn btn-success' style='margin-top: 12px'><i class='fa fa-play'></i> " + @T("Admin.System.ScheduleTasks.RunNow") + "</a><# } #>" +
+								"<# if (IsRunning) {#><div style='margin-top: 12px'><i class='fa fa-refresh fa-spin'></i>&nbsp;<#= ProgressInfo #><a href='<#= CancelUrl #>' class='btn-cancel-job' style='margin-left: 12px'>" + @T("Common.Cancel") + "</a></div><# } #>")
 							.Title(T("Common.Execution").Text)
 							.ReadOnly();
                         columns.Command(commands =>
@@ -64,11 +65,22 @@
                     .EnableCustomBinding(true))
             <script type="text/javascript">
                 function grid_onError(e) {
-                    alert(e.XMLHttpRequest.responseText);
+                    //alert(e.XMLHttpRequest.responseText);
                     e.preventDefault();
                 }
             </script>
         </td>
     </tr>
 </table>
+
+<script>
+	$(function () {
+		$('#schedule-tasks-grid').on('click', '.btn-cancel-job', function (e) {
+			if (!confirm('@T("Common.AreYouSure")')) {
+				e.preventDefault();
+				return false;
+			}
+		});
+	});
+</script>
 
