--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/pages.less
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/pages.less
@@ -167,3 +167,17 @@
 	vertical-align: top;
 }
 
+/* Manufacturers on homepage
+================================================ */
+
+.block-manufacturer-navigation .manufacturer-pic {
+    float: left;
+    width: 50px;
+    height: 50px;
+    margin: 0 0 10px 10px;
+
+    img {
+        max-width: 50px;
+        max-height: 50px;
+    }
+}
