--- a/src/Presentation/SmartStore.Web/Views/Customer/Info.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Customer/Info.cshtml
@@ -60,7 +60,6 @@
             <fieldset class="form-fields">
                 <legend>@T("Account.YourPersonalDetails")</legend>
 
-                @*codehint: sm-edit begin*@
                 @if (Model.GenderEnabled)
                 {
                     <div class="control-group">
@@ -134,6 +133,12 @@
                         }
                     </div>
                 }
+                
+                @if(Model.CustomerNumberEnabled)
+                {
+                    @Html.ControlGroupFor(model => model.CustomerNumber, required: false)    
+                }
+                
            </fieldset>
             
                 if (Model.AssociatedExternalAuthRecords.Count > 0)
