--- a/src/Plugins/SmartStore.DevTools/Views/DevTools/WidgetZone.cshtml
+++ b/src/Plugins/SmartStore.DevTools/Views/DevTools/WidgetZone.cshtml
@@ -1,3 +1,3 @@
-﻿<span class="label tooltip-toggle" title="@ViewData["widgetZone"]">
+﻿<span class="label tooltip-toggle widget-zone-info" title="@ViewData["widgetZone"]">
     Widget Zone
 </span>
